--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
-body {
+html {
   background-color: black;
 }
 
 h1 {
   color: white;
-  font-family: Verdana;
   font-size: 50px;
-  text-align: center;
 }
