--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,31 @@
-h1 {
-  color: white;
-  font-family: Verdana;
-  font-size: 50px;
+html {
+  background-color: black;
   text-align: center;
+  font-family: Verdana;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+.links {
+  color: Aquamarine;
+  font-size: 16px;
+}
+
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+.headers {
+  color: white;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
+}
+.copyright {
+  text-align: right;
 }
